# fanotify-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
docs/: USAGE.md
examples/: advanced_monitor.rs  async_monitor.rs  basic_monitor.rs  permission_monitor.rs
src/: async_fanotify.rs  error.rs  event.rs  fanotify.rs  flags.rs  lib.rs  linux.rs
tests/: integration_test.rs
